fix #642 Some wrong scrollbars were displayed in the splitter panels.
In these cases, this prevented from scrolling the content panel.
Some miscalculations of the width and height have also been fixed.
The splitter border  width is now accessible from the skinning system (by the new borderWidth property).
(cherry picked from commit 3fb53ec1b36bb665f595a867728328670143e6f5)

Conflicts:
	test/aria/widgets/WidgetsTestSuite.js

--- a/src/aria/widgets/container/SplitterStyle.tpl.css
+++ b/src/aria/widgets/container/SplitterStyle.tpl.css
@@ -73,7 +73,7 @@
 }
 
 .xSplitter_${skinClassName}_sBdr{
-   border:1px solid ${skinClass.borderColor} ;
+   border:${skinClass.borderWidth}px solid ${skinClass.borderColor} ;
 }
 
 .xSplitter_${skinClassName}_sMacro {
